api: improve token handling
